<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        tools:context=".gui.MainActivityGUI">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/willkommen"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginBottom="36sp"/>

        <Button
            android:id="@+id/btnCurrentTitle"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/details_ber_aktuellen_titel"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btnPlaylistReview"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/bewertung_der_playlist"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btnModeratorReview"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/bewertung_radiomoderator"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btnSongWish"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/songwunsch"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>
</ScrollView>
