<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        tools:context=".gui.SongWishGUI">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schicke_einen_songwunsch"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="36sp"/>


        <EditText
            android:id="@+id/editTextTextSong"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/titel" />

        <EditText
            android:id="@+id/editTextTextAlbum"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/album" />

        <EditText
            android:id="@+id/editTextTextInterpret"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/interpret" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/send"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/zur_ck"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>
</ScrollView>
