<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        tools:context=".gui.CurrentSongGUI">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aktuelle_song_informationen"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="36sp"/>

        <TextView
            android:id="@+id/songTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="36sp"/>

        <TextView
            android:id="@+id/albumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="36sp"/>

        <TextView
            android:id="@+id/interpreterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interpret"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="86sp"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/zur_ck"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>
</ScrollView>
